some camera overlays removed

--- a/app/src/main/res/drawable/backtrans2.xml
+++ b/app/src/main/res/drawable/backtrans2.xml
@@ -4,5 +4,5 @@
 
     <stroke
         android:width="5px"
-        android:color="#256DC2" />
+        android:color="@color/colorPrimaryJmas" />
 </shape>
