--- a/app/src/main/res/layout/activity_camera_full_screen.xml
+++ b/app/src/main/res/layout/activity_camera_full_screen.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,50 +9,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabHelpPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/ic_help_white_24dp"
+        fab:fab_colorNormal="#7e5d6d61"
+        fab:fab_colorPressed="@color/colorPrimaryDarkerJmas"
+        fab:fab_shadow="false"
+        android:layout_marginTop="55dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/fabTakePicture"
+        android:layout_alignStart="@+id/fabTakePicture" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabTakePicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_camera_alt_white_24dp"
+        fab:fab_colorNormal="#7e5d6d61"
+        fab:fab_colorPressed="@color/colorPrimaryDarkerJmas"
+        fab:fab_shadow="false"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp">
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="100dp"
+        android:layout_marginRight="20dp" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="red"
-            android:id="@+id/buttonRed"
-            android:onClick="takePictureRed"
-            android:background="#ff932c34" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="blue"
-            android:id="@+id/buttonBlue"
-            android:background="#ff3c5193"
-            android:onClick="takePictureBlue"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="green"
-            android:id="@+id/buttonGreen"
-            android:onClick="takePictureGreen"
-            android:background="#ff159336" />
-
-    </LinearLayout>
-
-    <!--<Button-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:onClick="takePicture"-->
-    <!--android:text="@string/take_picture"-->
-    <!--android:id="@+id/button" />-->
 
 </RelativeLayout>
