--- a/app/src/main/res/layout/fragment_bills.xml
+++ b/app/src/main/res/layout/fragment_bills.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.fourtails.usuariolecturista.BillsFragment">
+    tools:context="com.fourtails.usuariolecturista.fragments.BillsFragment">
 
 
     <android.support.v7.widget.CardView
@@ -124,6 +124,18 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="25dp"
         android:layout_marginRight="20dp" />
+
+    <com.devspark.robototextview.widget.RobotoTextView
+        android:id="@+id/textViewPrepayInvitation"
+        style="@style/TextViewMainPageLabel"
+        android:text="@string/billsLabelsPrepayInvitation"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_alignTop="@+id/fabPay"
+        android:layout_toLeftOf="@+id/fabPay"
+        android:layout_toStartOf="@+id/fabPay"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:visibility="invisible" />
 
     <com.devspark.robototextview.widget.RobotoTextView
         style="@style/TextViewIntroDesc"
