--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fourtails.usuariolecturista.PromotionsFragment"
+    tools:context="com.fourtails.usuariolecturista.fragments.PromotionsFragment"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
