--- a/app/src/main/res/layout/fragment_prepay_mode.xml
+++ b/app/src/main/res/layout/fragment_prepay_mode.xml
@@ -123,7 +123,7 @@
 
     <!--Scan button-->
     <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fabScan"
+        android:id="@+id/fabScanPrepay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
