--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,23 @@
     <Button
         android:id="@+id/logout_button"
         style="@style/ParseLoginUI.Button"
-        android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
-        android:text="@string/buttonLabelSettingsLogOut" />
+        android:layout_marginTop="72dp"
+        android:text="@string/buttonLabelSettingsLogOut"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="10dp" />
 
-</FrameLayout>
+    <com.devspark.robototextview.widget.RobotoButton
+        android:id="@+id/createBillButton"
+        android:text="Crear Factura"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/logout_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+
+</RelativeLayout>
