--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
 
     <ImageView
@@ -20,24 +20,21 @@
         android:id="@+id/linearLayout"
         android:gravity="center">
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fabCancel"
+        <Button
+            style="@style/RobotoButtonCancel"
+            android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_white_24dp"
-            fab:fab_colorNormal="@color/red_700"
-            fab:fab_colorPressed="@color/red_200"
-            fab:fab_shadow="true" />
+            android:text="@string/button_cancel" />
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fabAccept"
+        <Button
+            android:id="@+id/buttonSave"
+            android:textSize="14sp"
+            android:textColor="@color/grey_50"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_check_white_24dp"
-            fab:fab_colorNormal="@color/green_700"
-            fab:fab_colorPressed="@color/green_200"
-            fab:fab_shadow="true"
-            android:layout_marginLeft="80dp" />
+            android:text="@string/button_send"
+            android:layout_marginLeft="40dp" />
     </LinearLayout>
 
 
