--- a/app/src/main/res/layout/fragment_readings.xml
+++ b/app/src/main/res/layout/fragment_readings.xml
@@ -81,7 +81,7 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewBillingDate"
                 style="@style/TextViewMainPage"
-                android:text="26 de Abril 2015"
+                android:text="28 de Mayo 2015"
                 android:textIsSelectable="true" />
 
             <com.devspark.robototextview.widget.RobotoTextView
