oxxo barcode added, removed some robototext things

--- a/app/src/main/res/layout/fragment_add_credit_card.xml
+++ b/app/src/main/res/layout/fragment_add_credit_card.xml
@@ -103,7 +103,7 @@
 
     </RelativeLayout>
 
-    <com.devspark.robototextview.widget.RobotoCheckBox
+    <CheckBox
         style="@style/RobotoCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
