--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -77,7 +77,7 @@
         android:focusable="false"
         android:id="@+id/textViewPayCreditCardExpirationDate"/>
 
-    <com.devspark.robototextview.widget.RobotoCheckBox
+    <CheckBox
         style="@style/RobotoCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
